sass/_unittest.scss
/* ... */
.post-content {
  p.has-large-font-size {
    font-size: 36px;
    line-height: 1.2;
  }
  .wp-block-search {
    margin-bottom: 15px;
  }
  .wp-block-file {
    margin-top: 20px;
  }
  .wp-block-group__inner-container {
    p {
      margin-top: 0 !important;
    }
  }
}

.has-very-light-gray-color.has-very-light-gray-color {
  color: #fff;
  background: $primary-color !important;
}
.wp-block-button {
  margin-bottom: 10px;
}
.wp-block-archives,
.wp-block-categories {
  select {
    height: 50px;
    width: 200px;
    border: 1px solid #ddd;
    padding: 0 10px;
    margin-bottom: 10px;
  }
}
.wp-block-latest-comments {
  padding-left: 0 !important;
}
.wp-block-cover p.wp-block-cover-text,
.wp-block-cover.is-light .wp-block-cover__inner-container {
  color: #fff !important;
}

.wp-block-cover-text a {
  color: #fff;
}

.wp-block-rss {
  padding-left: 0 !important;
}

.widget .wp-block-archives-dropdown,
.widget .wp-block-categories-dropdown,
.widget .wp-block-loginout,
.widget .wp-block-social-links,
.widget.widget_archive select,
.widget.widget_categories select,
.widget.widget_text select,
.widget.widget_search .search-form,
.widget.widget_tag_cloud .tagcloud,
.widget .wp-block-tag-cloud
{
  margin-bottom: 6px;
}
.wp-block-latest-posts {
  .wp-block-latest-posts__post-title {
    display: inline-block;
    width: 100%;
  }
}
nav.wp-calendar-nav {
  justify-content: space-between;
  display: flex;

  a {
    color: $text-color;

    &:hover {
      color: $primary-color
    }
  }
}



  /*
   Media
  ============================*/
.page-content .wp-smiley,
.entry-content .wp-smiley,
.comment-content .wp-smiley {
  border: none;
  margin-bottom: 0;
  margin-top: 0;
  padding: 0;
}

embed,
iframe,
object {
  max-width: 100%;
}
// Form Validation
.wpcf7-form {

  // Validation Error Message
  .wpcf7-not-valid {
    border-color: #FF0000FF !important;
  }
  .wpcf7-not-valid-tip {
    display: none;
  }

  // Form Send Message
  &.sent {
    .wpcf7-response-output {
      font-weight: 500;
      font-size: 14px;
      line-height: 21px;
      letter-spacing: -0.01em;
      color: #72DC60;
      padding: 15px 20px;
      text-align: center;
      position: relative;
      background: #F4FFF5;
      border: 1px solid #CDF5C8 !important;
      border-radius: 10px;

    }
  }
  &.invalid {
    .wpcf7-response-output {
      font-weight: 500;
      font-size: 14px;
      line-height: 21px;
      letter-spacing: -0.01em;
      color: #FF5353;
      padding: 15px 20px;
      text-align: center;
      position: relative;
      background: #FFF7F7;
      border: 1px solid #FED8D8 !important;
      border-radius: 10px;
    }
  }
}
// Global Checkbox & Radio Style
input[type="checkbox"],
input[type="radio"]
{
  -webkit-appearance: none;
  appearance: none;
  margin: 0;
  width: 22px !important;
  height: 22px !important;
  border-color: rgb(223, 226, 233);
  border-radius: 3px !important;
  background-color: transparent !important;
  transform: scale(1);
  transition: 0.3s;
  position: relative !important;
  padding: 0 !important;
  cursor: pointer;
  margin-top: 0 !important;
  display: flex;
  align-self: center;
  flex-shrink: 0;
  box-shadow: none !important;

}


input[type="radio"]::before
{
  position: absolute;
  content: "";
  height: 8px;
  width: 8px;
  transition: 0.3s;
  transform: scale(0);
  background-color: $primary-color;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  margin: auto;
}
input[type="checkbox"]::before{
  position: absolute;
  content: "";
  background-image: url("data:image/svg+xml,%3Csvg width='9' height='8' viewBox='0 0 9 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.44899 7.76355C3.36328 7.84971 3.24641 7.89784 3.12495 7.89784C3.00349 7.89784 2.88662 7.84971 2.80091 7.76355L0.213156 5.17534C-0.0554271 4.90676 -0.0554271 4.47134 0.213156 4.20321L0.537198 3.87917C0.805781 3.61059 1.24074 3.61059 1.50932 3.87917L3.12495 5.4948L7.49057 1.12917C7.75916 0.860589 8.19457 0.860589 8.4627 1.12917L8.78674 1.45321C9.05532 1.7218 9.05532 2.15721 8.78674 2.42534L3.44899 7.76355Z' fill='white'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 8px;
  height: 100%;
  width: 100%;
  transition: 0.3s;
  transform: scale(0);
  background-color: $primary-color;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  margin: auto;
}
input[type="checkbox"]:checked::before,
input[type="radio"]:checked::before
{
  transform: scale(1);
  box-sizing:inherit !important;
}
input[type="checkbox"]:checked,
input[type="radio"]:checked
{
  border-color: $primary-color !important;
}

.wpcf7-form-control {
  display: flex;
  justify-content: space-between;
  gap: 10px;
  flex-wrap: wrap;

  .wpcf7-list-item {
    margin: 0;
    label {
      display: flex;
      align-content: center;
      margin: 0;
      gap: 10px;

      .wpcf7-list-item-label {
        font-size: 16px;
        font-weight: 400;
      }
    }
  }
}
.logged-in {
  .comment-respond {
    textarea {
      margin-bottom: 12px;
    }
  }
}
// Zoom Instagram Widget
.zoom-instagram-widget {
 p {
   color: $white;

   a {
     color: $orange-color;
   }
 }
  ul {
    list-style: none;
    li {
      color: $white;
    }
  }
}
  // When Admin Logged In
body {
  &.admin-bar {
    .header-menu-area.sticky_menu {
      top: 30px;

      @include rmaxwd(600) {
        top: 0;
      }
    }
  }
}

.page-template-default {
  &.page-id-146 {
    .page-content {
      p {
        &:last-child {
          margin-bottom: 10px;
        }
      }
    }
  }

  &.page-id-1133 {
    .page-content {
      .comment-respond {
        margin-top: 78px;
        display: inline-block;
        width: 100%;
      }
    }
  }

}
.post-template-default {
  &.postid-163 {
    .blog-details-wrapper .single-post-item .post-content {
      margin-bottom: 32px;
    }
  }
}

